predictive-maintenance-system/infra/k8s/predictive-maintenance/namespace-and-configmap.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: predictive-maintenance
